fixing image size on tablet

--- a/src/assets/components/Articles/Articles.css
+++ b/src/assets/components/Articles/Articles.css
@@ -63,7 +63,7 @@
 @media screen and (min-width: 768px) and (max-width: 1024px) {
   .post-image {
     height: 340px;
-    width: 600px;
+    width: 680px;
   }
   .article-card {
     width: 100%;
