--- a/src/assets/sections/MyWords/MyWords.css
+++ b/src/assets/sections/MyWords/MyWords.css
@@ -42,7 +42,7 @@
 
 @media screen and (min-width: 768px) and (max-width: 1024px) {
   .article-list-wrapper {
-    padding: 100px 16px;
+    padding: 128px 32px;
     text-align: left;
   }
 
